# twitterclone

./: README.md  db.sqlite3  pyproject.toml
authentication/: forms.py  views.py
notification/: models.py  views.py
notification/migrations/: 0001_initial.py
templates/: homepage.html  login_form.html  navbar.html  notifications.html  profilepage.html  signup_form.html  tweet_form.html  tweetpage.html
tweet/: forms.py  models.py  views.py
tweet/migrations/: 0001_initial.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  models.py  views.py
twitteruser/migrations/: 0001_initial.py
