[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = "My Kenzie Twitterclone assessment project- a mock Twitter back-end application."
authors = ["Jackson Nathaniel Detke <jndetke2150@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
